--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YouTube Downloader</title>
+  <title>YouTube Downloader by First</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-r from-white to-red-100 flex justify-center items-center min-h-screen font-sans">
+
+
+  <div id="loading-overlay" class="fixed inset-0 bg-black bg-opacity-70 flex flex-col justify-center items-center z-50 hidden">
+
+    <svg class="animate-spin h-12 w-12 text-red-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+      <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+    </svg>
+    <p class="text-white text-xl mt-4 font-bold">กำลังดึงข้อมูล... รอแป๊บ</p>
+  </div>
+
+
   <div class="bg-white p-10 rounded-2xl shadow-xl w-11/12 max-w-md text-center border-2 border-red-500">
     <h1 class="text-red-500 text-3xl font-bold mb-6">
       📥 YouTube MP3 & MP4 Downloader
     </h1>
-    <!-- แก้ไข action ให้ไปที่ /convert -->
-    <form action="/convert" method="POST">
+    <form id="convert-form" action="/convert" method="POST">
       <input
         type="text"
         name="url"
-        placeholder="Paste YouTube video link here..."
+        placeholder="แปะลิงก์ YouTube ตรงนี้"
         required
         class="w-full p-4 rounded-lg border-2 border-gray-300 mb-5 focus:outline-none focus:border-red-500 transition-colors duration-300"
       />
@@ -31,5 +42,16 @@
       For educational use only · Powered by Node.js, ytdl-core & FFmpeg
     </div>
   </div>
+
+  <script>
+  
+    const form = document.getElementById('convert-form');
+    const loadingOverlay = document.getElementById('loading-overlay');
+
+    form.addEventListener('submit', function() {
+      loadingOverlay.classList.remove('hidden');
+    });
+  </script>
+
 </body>
 </html>
